--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "dearq-web",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://Fran3478.github.io/dearq-web/",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
@@ -13,9 +12,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^5.0.1",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
