--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@tinymce/tinymce-react": "^5.0.1",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "html-react-parser": "^5.1.10",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.22.2"
